--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,12 @@ section {
   section h2 {
     font-size: 3.2rem; }
 
-header {
-  padding: 0 0; }
+header .works-box {
+  height: 250px;
+  width: auto;
+  background-image: url("../images/img_top_soccer.jpg");
+  background-size: cover;
+  background-position: bottom center; }
 
 #skills {
   background-color: #2b2b2b; }
@@ -75,18 +79,6 @@ header {
     margin-bottom: 10px;
     font-size: 2.4rem;
     font-weight: bold; }
-
-#works {
-  padding-top: 0;
-  padding-bottom: 0; }
-  #works .works-box {
-    width: 100%;
-    float: left;
-    height: 250px; }
-  #works img {
-    width: 100%;
-    max-height: 100%;
-    display: block; }
 
 #contact .button {
   padding: 5px;
@@ -119,11 +111,11 @@ footer {
   #skills .skill-box {
     margin: 0 10px; }
 
-  #works .works-box {
+  header .works-box {
     width: 100%;
-    height: 500px; }
-    #works .works-box img {
-      max-height: 100%;
-      width: 100%; } }
+    height: 500px;
+    background-image: url("../images/img_top_soccer.jpg");
+    background-size: cover;
+    background-position: bottom center; } }
 
 /*# sourceMappingURL=style.css.map */
