--- a/css/style.scss
+++ b/css/style.scss
@@ -69,8 +69,16 @@ section {
 
 //header
 header{
-    padding: 0 0;
+    .works-box {                
+        height: 250px;
+        width: auto;
+        background-image: url("../images/img_top_soccer.jpg");
+        background-size: cover;
+        background-position: bottom center;
+       }
 }
+
+
 // Skills
 #skills {
   background-color: $subColor;
@@ -100,23 +108,6 @@ header{
     font-weight: bold;
   }
 }
-
-
-// Works
-#works {
-    padding-top: 0;
-  padding-bottom: 0;
-  .works-box {
-    width: 100%;                  // widthを100%にして1列に1つ表示（つまり縦に並ぶ）
-    float: left;
-    height: 250px;
-    }
-    img {
-      width: 100%;
-      max-height: 100%;
-      display: block;
-    }
-  }
 
 // Contact
 #contact {
@@ -163,14 +154,13 @@ footer {
   }
 
   // Works
-  #works {
+  header{
     .works-box {
       width: 100%;
       height: 500px;
-      img{
-          max-height: 100%;
-          width: 100%;
-      }
+      background-image: url("../images/img_top_soccer.jpg");
+      background-size: cover;
+      background-position: bottom center;
     }
   }
-}
+  }
